# Echo-Game-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Dependencies.cmake  Dependencies.lua  Echo.sln  EchoProfile-Runtime.json  EchoProfile-Startup.json  LICENSE  README.md  Toolchain.cmake  premake5.lua
Bloomwood/: CMakeLists.txt
Bloomwood/assets/shaders/: vikingRoomFragment.slang  vikingRoomVertex.slang
Bloomwood/src/: BloomwoodApp.cpp  BloomwoodLayer.cpp  BloomwoodLayer.h
Bloomwood/src/Bloomwood/: BloodwoodLayer.cpp  BloomwoodApp.cpp  BloomwoodLayer.h
Echo/: CMakeLists.txt  Echo.vcxproj  Echo.vcxproj.filters  cmake_install.cmake  embed_asset.cmake  packages.config  premake5.lua
Echo/examples/: LazyLoadingExample.cpp
Echo/include/: Echo.h  pch.h
Echo/include/Core/: Application.h  Base.h  Input.h  Layer.h  Window.h
Echo/include/Events/: Event.h  MouseEvents.h  WindowEvents.h
Echo/include/Graphics/: Buffer.h  Camera.h  CommandBuffer.h  CommandList.h  Device.h  EditorCamera.h  Framebuffer.h  Material.h  Pipeline.h  Texture.h
Echo/include/Graphics/Commands/: CommandFactory.h  ICommand.h
Echo/include/ImGui/: ImGuiLayer.h
Echo/include/Scene/: Components.h  Scene.h  SceneCamera.h  SceneSerializer.h  ScriptableEntity.h
Echo/include/Utils/: PlatformUtils.h
Echo/src/: Echo.h  pch.h
Echo/src/Echo/: Echo.h  pch.h
Echo/src/Echo/AssetManagement/: Asset.h  AssetManager.h
Echo/src/Echo/AssetManager/: Asset.h  AssetMetadata.h  AssetRegistry.cpp  AssetRegistry.h  AssetWatcher.cpp  AssetWatcher.h
Echo/src/Echo/Core/: Application.cpp  Application.h  Base.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Maths.cpp  Maths.h  MouseButtonCodes.h  Timestep.h  UUID.cpp  UUID.h  Window.h
Echo/src/Echo/Debug/: Instrumentor.h
Echo/src/Echo/Events/: Event.h  EventSubject.cpp  EventSubject.h  KeyEvents.h  MouseEvents.h  Observer.h  WindowEvents.h
Echo/src/Echo/Graphics/: Buffer.cpp  Buffer.h  Camera.h  CommandBuffer.cpp  CommandBuffer.h  CommandList.cpp  CommandList.h  Descriptors.h  Device.cpp  Device.h  EditorCamera.cpp  EditorCamera.h  FrameBuffer.h  Framebuffer.cpp  Framebuffer.h  GraphicsContext.cpp  GraphicsContext.h  GraphicsModel.cpp  GraphicsModel.h  GraphicsPipeline.cpp  GraphicsPipeline.h  GraphicsShader.cpp  GraphicsShader.h  Image.cpp  Image.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  OrthographicCamera.cpp  OrthographicCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h  Pipeline.cpp  Pipeline.h  RHI.h  RHIDesc.h  RHISpecification.h  (+17 more)
Echo/src/Echo/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h  ImGuiRenderer.cpp  ImGuiRenderer.h  ImGuiTextureRegistry.cpp  ImGuiTextureRegistry.h  ImGuiVulkan.cpp  ImGuiVulkan.h
Echo/src/Echo/Math/: Math.cpp  Math.h
Echo/src/Echo/Physics/: Physics2D.cpp  Physics2D.h
Echo/src/Echo/Reflections/: ShaderReflection.cpp  ShaderReflection.h
Echo/src/Echo/Scene/: ComponentRegistry.cpp  ComponentRegistry.h  Components.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneCamera.cpp  SceneCamera.h  SceneSerializer.cpp  ScriptableEntity.h
Echo/src/Echo/Serializer/: AssetMatadataSerializer.cpp  MaterialSerializer.cpp  PipelineSerializer.cpp  SceneSerializer.cpp  SceneSerializer.h  ShaderSerializer.cpp
Echo/src/Echo/Utils/: DeferredInitManager.cpp  DeferredInitManager.h
Echo/src/Platform/DirectX12/: DirectX12GraphicsContext.cpp  DirectX12GraphicsContext.h  DirectX12RendererAPI.cpp  DirectX12RendererAPI.h
Echo/src/Platform/Shader/: ShaderCompiler.cpp  ShaderCompiler.h
Echo/src/Platform/Vulkan/: VulkanBuffer.cpp  VulkanBuffer.h  VulkanCommandBuffer.cpp  VulkanCommandBuffer.h  VulkanCommandList.cpp  VulkanCommandList.h  VulkanDevice.cpp  VulkanDevice.h  VulkanFrameBuffer.cpp  VulkanFrameBuffer.h  VulkanFramebuffer.cpp  VulkanFramebuffer.h  VulkanGraphicsContext.cpp  VulkanGraphicsContext.h  VulkanImage.cpp  VulkanImage.h  VulkanMaterial.cpp  VulkanMaterial.h  VulkanMesh.cpp  VulkanMesh.h  VulkanModel.cpp  VulkanModel.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanRenderCaps.cpp  VulkanRenderCaps.h  VulkanRenderPass.cpp  VulkanRenderPass.h  VulkanRendererAPI.cpp  VulkanRendererAPI.h  VulkanResource.cpp  VulkanResource.h  VulkanShader.cpp  VulkanShader.h  VulkanSwapchain.cpp  VulkanSwapchain.h  VulkanSynchronization.cpp  VulkanSynchronization.h  VulkanTexture.cpp  VulkanTexture.h
Echo/src/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  (+3 more)
EchoEditor/: CMakeLists.txt
EchoEditor/assets/shaders/: TriangleShader.frag  TriangleShader.vert
EchoEditor/src/Editor/: EditorLayer.h
Echo_Editor/: CMakeLists.txt  premake5.lua
Echo_Editor/assets/shaders/: Colored.glsl  Gradient.comp  gradient.hlsl  triangleFragment.hlsl  triangleVertex.hlsl
Echo_Editor/src/Editor/: EditorApp.cpp  EditorLayer.cpp  EditorLayer.h
Horizon/: CMakeLists.txt  cmake_install.cmake  imgui.ini
Horizon/Resources/shaders/: circleShader.slang  circleShader.slang.cache  imguiShader.slang  lineShader.slang  lineShader.slang.cache  outlineShader.slang  outlineShader.slang.cache  quadShader.slang  quadShader.slang.cache  unlitShader.slang
Horizon/assets/scenes/: 3DScene.echo  3DScene2.echo  TestScene.echo
Horizon/assets/shaders/: circleShader.slang  gradient.slang  outlineShader.slang  quadFragment.slang  quadShader.slang  quadVertex.slang  triangleFragment.slang  triangleVertex.slang
Horizon/src/: EditorApp.cpp  EditorLayer.cpp  EditorLayer.h  config.h.in
Horizon/src/Core/: EditorCamera.h
Horizon/src/Panels/: ContentBrowserPanel.cpp  ContentBrowserPanel.h  EntityComponentPanel.cpp  EntityComponentPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
Minecraft Clone/: CMakeLists.txt
Minecraft Clone/assets/shaders/: nightsky.slang
Minecraft Clone/src/Minecraft/: MinecraftLayer.cpp  MinecraftLayer.h
Minecraft_Clone/: CMakeLists.txt  cmake_install.cmake  premake5.lua
Minecraft_Clone/assets/shaders/: nightsky.hlsl  unlitFragmentShader.hlsl  unlitVertexShader.hlsl
Minecraft_Clone/src/Minecraft/: MinecraftApp.cpp  MinecraftLayer.cpp  MinecraftLayer.h
(+127 files in other folders)
